[package]
name = "keccak_air"
description = "An AIR for the Keccak-f permutation, assuming a field size between 2^16 and 2^32."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://example.local/keccak_air"
homepage = "https://example.local/keccak_air"
keywords = ["stark", "air", "keccak"]
categories = ["cryptography", "algorithms"]

[dependencies]
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }

rand = { version = "0.8", features = ["small_rng"] }
tracing = { version = "0.1" }

[dev-dependencies]
# Upstream Plonky3 crates for tests
p3k_keccak_air = { package = "p3-keccak-air", git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }
p3k_goldilocks = { package = "p3-goldilocks", git = "https://github.com/Plonky3/Plonky3", rev = "d0c4a36" }

tracing-forest = { version = "0.1", features = ["ansi", "smallvec"] }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }

[features]
parallel = ["p3-maybe-rayon/parallel"]
